--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "D": "^1.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "typescript": "^4.6.4"
   }
 }
