--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "D": "^1.0.0",
+    "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
