--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "swiper": "^8.1.4",
     "typescript": "^4.6.4"
   }
 }
