--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@types/node": "^17.0.33",
-    "@types/react": "^18.0.9",
-    "D": "^1.0.0",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "swiper": "^8.1.4",
-    "typescript": "^4.6.4"
+    "react-icons": "^4.3.1",
+    "sass": "^1.32.8",
+    "swiper": "^6.5.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "json-server": "^0.16.3",
+    "typescript": "^4.2.3"
   }
 }
